字体统一，人物设定添加方式修改

--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -51,3 +51,7 @@ text-decoration: none;
 [v-cloak] {
   display: none !important;
 }
+textarea {
+    outline: none;
+    font: 14px/1.8 "PingFangSC-Regular", "HelveticaNeue-Light", "Helvetica Neue Light", "Microsoft YaHei","sans-serif";
+}
